"Fixed particles, need to adjust z-index"

--- a/src/Home.css
+++ b/src/Home.css
@@ -120,10 +120,8 @@ footer {
     background-color: rgb(34, 34, 34);
     color: white;
 }
-.particles-background {
-    position: fixed;
+.particles-js-canvas-el {
+    position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    z-index: -1;
   }
